alter size of circle in legend for spills >= 100; resolves #14

--- a/css/legend.css
+++ b/css/legend.css
@@ -55,6 +55,12 @@ ul.legend-labels li span.point {
   height: 7px;
 }
 
+ul.legend-labels li:nth-child(0n+3) span.point {
+  width: 12px;
+  height: 12px;
+  margin-left: -2.5px;
+}
+
 ul.legend-labels li span.point-donut {
   background: none;
   border-radius: 50%;
